# swagger.json
@@ -170,11 +170,6 @@
                     "type": "string",
                     "maxLength": 100
                   },
-                  "defaultCurrency": {
-                    "type": "string",
-                    "minLength": 3,
-                    "maxLength": 3
-                  },
                   "logo": {
                     "type": "string",
                     "format": "binary"
@@ -244,11 +239,6 @@
                   "taxNumber": {
                     "type": "string",
                     "maxLength": 100
-                  },
-                  "defaultCurrency": {
-                    "type": "string",
-                    "minLength": 3,
-                    "maxLength": 3
                   },
                   "logo": {
                     "type": "string",
@@ -716,7 +706,6 @@
                   "invoiceNumber",
                   "issueDate",
                   "dueDate",
-                  "currency",
                   "items"
                 ],
                 "properties": {
@@ -744,10 +733,6 @@
                   },
                   "notes": {
                     "type": "string"
-                  },
-                  "currency": {
-                    "type": "string",
-                    "maxLength": 10
                   },
                   "items": {
                     "type": "array",
@@ -848,7 +833,6 @@
                   "invoiceNumber",
                   "issueDate",
                   "dueDate",
-                  "currency",
                   "items"
                 ],
                 "properties": {
@@ -876,10 +860,6 @@
                   },
                   "notes": {
                     "type": "string"
-                  },
-                  "currency": {
-                    "type": "string",
-                    "maxLength": 10
                   },
                   "items": {
                     "type": "array",
